[gd_scene load_steps=16 format=1]

[ext_resource path="res://assets/menu.png" type="Texture" id=1]
[ext_resource path="res://assets/menu_button_work_unpressed.png" type="Texture" id=2]
[ext_resource path="res://assets/menu_button_work_pressed.png" type="Texture" id=3]
[ext_resource path="res://scripts/day_button.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/small.fnt" type="BitmapFont" id=5]
[ext_resource path="res://assets/fonts/title.fnt" type="BitmapFont" id=6]
[ext_resource path="res://close_button.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/page_button_next_unpressed.png" type="Texture" id=8]
[ext_resource path="res://assets/page_button_next_pressed.png" type="Texture" id=9]

[sub_resource type="StyleBoxTexture" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 2 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 3 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 2 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=7]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 8 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=8]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 9 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=9]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 8 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[node name="level_selector" type="Node2D"]

[node name="bg" type="Sprite" parent="."]

texture = ExtResource( 1 )
centered = false

[node name="button_day1" type="Button" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 85.0
margin/top = 150.0
margin/right = 211.0
margin/bottom = 271.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
script/script = ExtResource( 4 )

[node name="label" type="VBoxContainer" parent="button_day1"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 10.0
margin/right = 125.0
margin/bottom = 108.0
alignment = 0

[node name="day" type="CenterContainer" parent="button_day1/label"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 125.0
margin/bottom = 26.0
use_top_left = false

[node name="label" type="Label" parent="button_day1/label/day"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 26.0
margin/top = 0.0
margin/right = 99.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Stand"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="number" type="CenterContainer" parent="button_day1/label"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 30.0
margin/right = 125.0
margin/bottom = 95.0
use_top_left = false

[node name="label" type="Label" parent="button_day1/label/number"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 51.0
margin/top = 0.0
margin/right = 73.0
margin/bottom = 65.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.172549, 0.164706, 0.196078, 1 )
text = "1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="button_day2" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 267.0
margin/top = 151.0
margin/right = 393.0
margin/bottom = 272.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
script/script = ExtResource( 4 )

[node name="label" type="VBoxContainer" parent="button_day2"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 10.0
margin/right = 121.0
margin/bottom = 105.0
alignment = 0

[node name="day" type="CenterContainer" parent="button_day2/label"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 121.0
margin/bottom = 26.0
use_top_left = false

[node name="Label" type="Label" parent="button_day2/label/day"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 24.0
margin/top = 0.0
margin/right = 97.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Stand"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="number" type="CenterContainer" parent="button_day2/label"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 30.0
margin/right = 121.0
margin/bottom = 95.0
use_top_left = false

[node name="label" type="Label" parent="button_day2/label/number"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 41.0
margin/top = 0.0
margin/right = 79.0
margin/bottom = 65.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.172549, 0.164706, 0.196078, 1 )
text = "2"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="button_day3" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 441.0
margin/top = 151.0
margin/right = 567.0
margin/bottom = 272.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
script/script = ExtResource( 4 )

[node name="label" type="VBoxContainer" parent="button_day3"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 10.0
margin/right = 121.0
margin/bottom = 105.0
alignment = 0

[node name="day" type="CenterContainer" parent="button_day3/label"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 121.0
margin/bottom = 26.0
use_top_left = false

[node name="Label" type="Label" parent="button_day3/label/day"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 24.0
margin/top = 0.0
margin/right = 97.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Stand"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="number" type="CenterContainer" parent="button_day3/label"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 30.0
margin/right = 121.0
margin/bottom = 95.0
use_top_left = false

[node name="label" type="Label" parent="button_day3/label/number"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 41.0
margin/top = 0.0
margin/right = 79.0
margin/bottom = 65.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.172549, 0.164706, 0.196078, 1 )
text = "3"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="button_day4" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 84.0
margin/top = 329.0
margin/right = 210.0
margin/bottom = 450.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
script/script = ExtResource( 4 )

[node name="label" type="VBoxContainer" parent="button_day4"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 10.0
margin/right = 121.0
margin/bottom = 105.0
alignment = 0

[node name="day" type="CenterContainer" parent="button_day4/label"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 121.0
margin/bottom = 26.0
use_top_left = false

[node name="Label" type="Label" parent="button_day4/label/day"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 24.0
margin/top = 0.0
margin/right = 97.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Stand"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="number" type="CenterContainer" parent="button_day4/label"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 30.0
margin/right = 121.0
margin/bottom = 95.0
use_top_left = false

[node name="label" type="Label" parent="button_day4/label/number"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 42.0
margin/top = 0.0
margin/right = 79.0
margin/bottom = 65.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.172549, 0.164706, 0.196078, 1 )
text = "4"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="button_day5" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 268.0
margin/top = 329.0
margin/right = 394.0
margin/bottom = 450.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
script/script = ExtResource( 4 )

[node name="label" type="VBoxContainer" parent="button_day5"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 10.0
margin/right = 121.0
margin/bottom = 105.0
alignment = 0

[node name="day" type="CenterContainer" parent="button_day5/label"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 121.0
margin/bottom = 26.0
use_top_left = false

[node name="Label" type="Label" parent="button_day5/label/day"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 24.0
margin/top = 0.0
margin/right = 97.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Stand"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="number" type="CenterContainer" parent="button_day5/label"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 30.0
margin/right = 121.0
margin/bottom = 95.0
use_top_left = false

[node name="label" type="Label" parent="button_day5/label/number"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 42.0
margin/top = 0.0
margin/right = 79.0
margin/bottom = 65.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.172549, 0.164706, 0.196078, 1 )
text = "5"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="button_day6" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 444.0
margin/top = 329.0
margin/right = 570.0
margin/bottom = 450.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
script/script = ExtResource( 4 )

[node name="label" type="VBoxContainer" parent="button_day6"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 10.0
margin/right = 121.0
margin/bottom = 105.0
alignment = 0

[node name="day" type="CenterContainer" parent="button_day6/label"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 121.0
margin/bottom = 26.0
use_top_left = false

[node name="Label" type="Label" parent="button_day6/label/day"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 24.0
margin/top = 0.0
margin/right = 97.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Stand"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="number" type="CenterContainer" parent="button_day6/label"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 30.0
margin/right = 121.0
margin/bottom = 95.0
use_top_left = false

[node name="label" type="Label" parent="button_day6/label/number"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 41.0
margin/top = 0.0
margin/right = 79.0
margin/bottom = 65.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.172549, 0.164706, 0.196078, 1 )
text = "6"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="button_day7" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 83.0
margin/top = 500.0
margin/right = 209.0
margin/bottom = 621.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
script/script = ExtResource( 4 )

[node name="label" type="VBoxContainer" parent="button_day7"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 10.0
margin/right = 121.0
margin/bottom = 105.0
alignment = 0

[node name="day" type="CenterContainer" parent="button_day7/label"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 121.0
margin/bottom = 26.0
use_top_left = false

[node name="Label" type="Label" parent="button_day7/label/day"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 24.0
margin/top = 0.0
margin/right = 97.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Stand"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="number" type="CenterContainer" parent="button_day7/label"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 30.0
margin/right = 121.0
margin/bottom = 95.0
use_top_left = false

[node name="label" type="Label" parent="button_day7/label/number"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 45.0
margin/top = 0.0
margin/right = 75.0
margin/bottom = 65.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.172549, 0.164706, 0.196078, 1 )
text = "7"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="button_day8" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 270.0
margin/top = 500.0
margin/right = 396.0
margin/bottom = 621.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
script/script = ExtResource( 4 )

[node name="label" type="VBoxContainer" parent="button_day8"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 10.0
margin/right = 121.0
margin/bottom = 105.0
alignment = 0

[node name="day" type="CenterContainer" parent="button_day8/label"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 121.0
margin/bottom = 26.0
use_top_left = false

[node name="Label" type="Label" parent="button_day8/label/day"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 24.0
margin/top = 0.0
margin/right = 97.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Stand"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="number" type="CenterContainer" parent="button_day8/label"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 30.0
margin/right = 121.0
margin/bottom = 95.0
use_top_left = false

[node name="label" type="Label" parent="button_day8/label/number"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 40.0
margin/top = 0.0
margin/right = 81.0
margin/bottom = 65.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.172549, 0.164706, 0.196078, 1 )
text = "8"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="button_day9" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 444.0
margin/top = 500.0
margin/right = 570.0
margin/bottom = 621.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
script/script = ExtResource( 4 )

[node name="label" type="VBoxContainer" parent="button_day9"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 10.0
margin/right = 121.0
margin/bottom = 105.0
alignment = 0

[node name="day" type="CenterContainer" parent="button_day9/label"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 121.0
margin/bottom = 26.0
use_top_left = false

[node name="Label" type="Label" parent="button_day9/label/day"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 24.0
margin/top = 0.0
margin/right = 97.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Stand"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="number" type="CenterContainer" parent="button_day9/label"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 30.0
margin/right = 121.0
margin/bottom = 95.0
use_top_left = false

[node name="label" type="Label" parent="button_day9/label/number"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 41.0
margin/top = 0.0
margin/right = 79.0
margin/bottom = 65.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.172549, 0.164706, 0.196078, 1 )
text = "9"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="close_button" parent="." instance=ExtResource( 7 )]

[node name="next_page_button" type="Button" parent="."]

visibility/opacity = 0.5
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 527.0
margin/top = 678.0
margin/right = 622.0
margin/bottom = 775.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[connection signal="button_down" from="button_day1" to="button_day1" method="_on_button_day_button_down"]

[connection signal="button_up" from="button_day1" to="button_day1" method="_on_button_day_button_up"]

[connection signal="pressed" from="button_day1" to="button_day1" method="_on_button_day1_pressed"]

[connection signal="button_down" from="button_day2" to="button_day2" method="_on_button_day_button_down"]

[connection signal="button_up" from="button_day2" to="button_day2" method="_on_button_day_button_up"]

[connection signal="pressed" from="button_day2" to="button_day2" method="_on_button_day2_pressed"]

[connection signal="button_down" from="button_day3" to="button_day3" method="_on_button_day_button_down"]

[connection signal="button_up" from="button_day3" to="button_day3" method="_on_button_day_button_up"]

[connection signal="button_down" from="button_day4" to="button_day4" method="_on_button_day_button_down"]

[connection signal="button_up" from="button_day4" to="button_day4" method="_on_button_day_button_up"]

[connection signal="button_down" from="button_day5" to="button_day5" method="_on_button_day_button_down"]

[connection signal="button_up" from="button_day5" to="button_day5" method="_on_button_day_button_up"]

[connection signal="button_down" from="button_day6" to="button_day6" method="_on_button_day_button_down"]

[connection signal="button_up" from="button_day6" to="button_day6" method="_on_button_day_button_up"]

[connection signal="button_down" from="button_day7" to="button_day7" method="_on_button_day_button_down"]

[connection signal="button_up" from="button_day7" to="button_day7" method="_on_button_day_button_up"]

[connection signal="button_down" from="button_day8" to="button_day8" method="_on_button_day_button_down"]

[connection signal="button_up" from="button_day8" to="button_day8" method="_on_button_day_button_up"]

[connection signal="button_down" from="button_day9" to="button_day9" method="_on_button_day_button_down"]

[connection signal="button_up" from="button_day9" to="button_day9" method="_on_button_day_button_up"]


